--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "release-please": "^16.15.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.14.0",
     "vitest": "^2.1.5"
