--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-plugins",
+  "name": "@forthtilliath/tailwind-plugins",
   "version": "1.0.0",
   "author": "Forthtilliath",
   "repository": {
@@ -59,5 +59,8 @@
   "type": "module",
   "dependencies": {
     "@babel/preset-typescript": "^7.26.0"
+  },
+  "directories": {
+    "test": "tests"
   }
 }
